# axiom

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  main.cpp
axiom/: Axiom.hpp  Buffer.cpp  CMakeLists.txt  Engine.cpp  Engine.hpp  Init.cpp  Init.hpp  Log.hpp  Maths.hpp  Shader.hpp  Utils.hpp  Vertex.hpp
axiom/include/: Alloc.hpp  AssetManager.hpp  Assets.hpp  Axiom.hpp  Buffer.hpp  Debug.hpp  Decorators.hpp  Engine.hpp  JSON.hpp  Log.hpp  Maths.hpp  Mesh.hpp  Pipeline.hpp  Prim.hpp  RenderPass.hpp  STL.hpp  Shader.hpp  Shapes.hpp  Texture.hpp  Timer.hpp  Utils.hpp  Vertex.hpp  Viewport.hpp
axiom/include/Assets/: AssetManager.hpp  Assets.hpp  Model.hpp  TextureAsset.hpp
axiom/include/Core/: Alloc.hpp  Debug.hpp  Decorators.hpp  Engine.hpp  JSON.hpp  Maths.hpp  Prim.hpp  Profile.hpp  STL.hpp  Timer.hpp  Utils.hpp
axiom/include/Misc/: TanklagerTTF.hpp
axiom/include/Render/: Buffer.hpp  GPU.hpp  Mesh.hpp  Pipeline.hpp  RenderPass.hpp  Shader.hpp  Shapes.hpp  Texture.hpp  Vertex.hpp  Viewport.hpp
axiom/src/: AssetManager.cpp  Assets.cpp  Buffer.cpp  Engine.cpp  Mesh.cpp  Model.cpp  Pipeline.cpp  Profile.cpp  RenderPass.cpp  STL.cpp  Shader.cpp  Shapes.cpp  Texture.cpp  TextureAsset.cpp  Utils.cpp  Viewport.cpp
cmake/: AxiomUtils.cmake
examples/basic/: main.cpp
examples/deferred/: main.cpp
meta/docs/: ssr_links.txt
meta/drawings/: Arch (unfinished).drawio  Assets.drawio
resources/: cube.slang
resources/shaders/: cube.slang  mips.slang
tests/: AssetTests.cpp  AxiomTestFramework.hpp  CoreTests.cpp
